Database start. (#493)
Implements a basic API endpoint for fetching server information and all of the wiring required behind that. Does a few things. 

1. Sets up the wiring for the `servers` table end-to-end.
2. Moves slf4j and jackson into boms. This fixes a dependency issue.
3. Minor tweaks and improvements. 

Faults:

* At the moment we're eagerly initializing the session factories, which caused some intermittent problems.  Those are guarded against for the moment, but the better long term solution will be to fix that. 

Built with assistance from Antigravity.
