# data/src/main/java/com/larpconnect/njall/data/domain/ContactType.java
@@ -1,0 +1,9 @@
+package com.larpconnect.njall.data.domain;
+
+/** Enumeration of communication contact protocols for server contact points. */
+public enum ContactType {
+  EMAIL,
+  ACTOR,
+  PHONE,
+  OTHER
+}
