# data/src/main/java/com/larpconnect/njall/data/domain/RoleType.java
@@ -1,0 +1,9 @@
+package com.larpconnect.njall.data.domain;
+
+/** Enumeration of security and management roles for server contact points. */
+public enum RoleType {
+  NONE,
+  ADMIN,
+  MODERATOR,
+  SECURITY
+}
